<resources>
    <string name="app_name">ThemedProject</string>
    <string name="about_app_title">Custom Gallery</string>
    <string name="about_app_description">A Colorful Gallery</string>
    <string name="about_app_version">Version : 1.0</string>
    <string name="support_development">Support Development</string>
    <string name="creators">Creator</string>


    <string name="about_support_report_bug">Report bug</string>
    <string name="about_support_report_bug_sub">Report bug or request new features.</string>
    <string name="about_support">Software Development</string>

</resources>
